ftr: createIssue/changeStateOfIssue

--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,6 @@ jar {
         attributes 'Main-Class': 'com.sweprj.Main'
     }
 }
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs << "-Xlint:unchecked"
+}
